--- a/style.css
+++ b/style.css
@@ -14,6 +14,16 @@ body {
   overflow: hidden;
 }
 
+#operationDisplay {
+  width: 100%;
+  height: 30px;
+  background-color: #e0e0e0;
+  padding: 10px;
+  font-size: 18px;
+  box-sizing: border-box;
+  text-align: right;
+}
+
 #display {
   width: 100%;
   height: 50px;
